--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -1,3 +1,8 @@
 .bx{
 background-image: linear-gradient(315deg, #000000 0%, #212022 94%);
 }
+
+.highlight-a a{
+text-decoration: underline;
+color: var(--blue);
+}
