--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -4,5 +4,9 @@ background-image: linear-gradient(315deg, #000000 0%, #212022 94%);
 
 .highlight-a a{
 text-decoration: underline;
-color: var(--blue);
+color: var(--grey);
+}
+ 
+.highlight-a a:hover{
+    color: var(--blue);
 }
