--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -1,5 +1,6 @@
 .bx{
-background-image: linear-gradient(315deg, #000000 0%, #212022 94%);
+/* background-image: linear-gradient(315deg, #000000 0%, #212022 94%); */
+background-image: linear-gradient(210deg, #000000 0%, #150c1d 94%);
 }
 
 .highlight-a a{
